--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -306,14 +306,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'United States'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_two():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return (df[\"Gold\"] - df[\"Gold.1\"]).idxmax()\n",
+    "\n",
+    "answer_two()"
    ]
   },
   {
