--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -343,14 +343,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'United States'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_three():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
+    "    return ((df[\"Gold\"] - df[\"Gold.1\"])/df[\"Gold.2\"]).idxmax()\n",
+    "\n",
+    "answer_three()"
    ]
   },
   {
