--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -343,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'United States'"
+       "'Bulgaria'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
    "outputs": [],
    "source": [
     "def answer_four():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return df[\"Gold.2\"]*3 + df[\"Silver.2\"]*2 + df[\"Bronze.2\"]*1"
    ]
   },
   {
