--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -240,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# You should write your whole answer within the function provided. The autograder will call\n",
@@ -343,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +354,7 @@
        "'Bulgaria'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,14 +379,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Australia                  923\n",
+       "Austria                    569\n",
+       "Belarus                    154\n",
+       "Belgium                    276\n",
+       "Bulgaria                   411\n",
+       "Canada                     846\n",
+       "China                     1120\n",
+       "Croatia                     67\n",
+       "Czech Republic             134\n",
+       "Czechoslovakia             327\n",
+       "Estonia                     77\n",
+       "Finland                    895\n",
+       "France                    1500\n",
+       "Germany                   1546\n",
+       "United Team of Germany     269\n",
+       "East Germany              1068\n",
+       "West Germany               459\n",
+       "Great Britain             1574\n",
+       "Italy                     1333\n",
+       "Japan                      866\n",
+       "Kazakhstan                 113\n",
+       "South Korea                609\n",
+       "Netherlands                727\n",
+       "Norway                     985\n",
+       "Poland                     520\n",
+       "Russia                    1042\n",
+       "Soviet Union              2526\n",
+       "Unified Team               287\n",
+       "Slovakia                    58\n",
+       "Slovenia                    56\n",
+       "Spain                      268\n",
+       "Sweden                    1217\n",
+       "Switzerland                630\n",
+       "Ukraine                    220\n",
+       "United States             5684\n",
+       "Uzbekistan                  38\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_four():\n",
-    "    return df[\"Gold.2\"]*3 + df[\"Silver.2\"]*2 + df[\"Bronze.2\"]*1"
+    "    return df[\"Gold.2\"]*3 + df[\"Silver.2\"]*2 + df[\"Bronze.2\"]\n",
+    "\n",
+    "answer_four()"
    ]
   },
   {
@@ -404,14 +453,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUMLEV</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>DIVISION</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>COUNTY</th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "      <th>CENSUS2010POP</th>\n",
+       "      <th>ESTIMATESBASE2010</th>\n",
+       "      <th>POPESTIMATE2010</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RDOMESTICMIG2011</th>\n",
+       "      <th>RDOMESTICMIG2012</th>\n",
+       "      <th>RDOMESTICMIG2013</th>\n",
+       "      <th>RDOMESTICMIG2014</th>\n",
+       "      <th>RDOMESTICMIG2015</th>\n",
+       "      <th>RNETMIG2011</th>\n",
+       "      <th>RNETMIG2012</th>\n",
+       "      <th>RNETMIG2013</th>\n",
+       "      <th>RNETMIG2014</th>\n",
+       "      <th>RNETMIG2015</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4779736</td>\n",
+       "      <td>4780127</td>\n",
+       "      <td>4785161</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002295</td>\n",
+       "      <td>-0.193196</td>\n",
+       "      <td>0.381066</td>\n",
+       "      <td>0.582002</td>\n",
+       "      <td>-0.467369</td>\n",
+       "      <td>1.030015</td>\n",
+       "      <td>0.826644</td>\n",
+       "      <td>1.383282</td>\n",
+       "      <td>1.724718</td>\n",
+       "      <td>0.712594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>54571</td>\n",
+       "      <td>54571</td>\n",
+       "      <td>54660</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.242091</td>\n",
+       "      <td>-2.915927</td>\n",
+       "      <td>-3.012349</td>\n",
+       "      <td>2.265971</td>\n",
+       "      <td>-2.530799</td>\n",
+       "      <td>7.606016</td>\n",
+       "      <td>-2.626146</td>\n",
+       "      <td>-2.722002</td>\n",
+       "      <td>2.592270</td>\n",
+       "      <td>-2.187333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>182265</td>\n",
+       "      <td>182265</td>\n",
+       "      <td>183193</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.832960</td>\n",
+       "      <td>17.647293</td>\n",
+       "      <td>21.845705</td>\n",
+       "      <td>19.243287</td>\n",
+       "      <td>17.197872</td>\n",
+       "      <td>15.844176</td>\n",
+       "      <td>18.559627</td>\n",
+       "      <td>22.727626</td>\n",
+       "      <td>20.317142</td>\n",
+       "      <td>18.293499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Barbour County</td>\n",
+       "      <td>27457</td>\n",
+       "      <td>27457</td>\n",
+       "      <td>27341</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.728132</td>\n",
+       "      <td>-2.500690</td>\n",
+       "      <td>-7.056824</td>\n",
+       "      <td>-3.904217</td>\n",
+       "      <td>-10.543299</td>\n",
+       "      <td>-4.874741</td>\n",
+       "      <td>-2.758113</td>\n",
+       "      <td>-7.167664</td>\n",
+       "      <td>-3.978583</td>\n",
+       "      <td>-10.543299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Bibb County</td>\n",
+       "      <td>22915</td>\n",
+       "      <td>22919</td>\n",
+       "      <td>22861</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-5.527043</td>\n",
+       "      <td>-5.068871</td>\n",
+       "      <td>-6.201001</td>\n",
+       "      <td>-0.177537</td>\n",
+       "      <td>0.177258</td>\n",
+       "      <td>-5.088389</td>\n",
+       "      <td>-4.363636</td>\n",
+       "      <td>-5.403729</td>\n",
+       "      <td>0.754533</td>\n",
+       "      <td>1.107861</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 100 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SUMLEV  REGION  DIVISION  STATE  COUNTY   STNAME         CTYNAME  \\\n",
+       "0      40       3         6      1       0  Alabama         Alabama   \n",
+       "1      50       3         6      1       1  Alabama  Autauga County   \n",
+       "2      50       3         6      1       3  Alabama  Baldwin County   \n",
+       "3      50       3         6      1       5  Alabama  Barbour County   \n",
+       "4      50       3         6      1       7  Alabama     Bibb County   \n",
+       "\n",
+       "   CENSUS2010POP  ESTIMATESBASE2010  POPESTIMATE2010     ...       \\\n",
+       "0        4779736            4780127          4785161     ...        \n",
+       "1          54571              54571            54660     ...        \n",
+       "2         182265             182265           183193     ...        \n",
+       "3          27457              27457            27341     ...        \n",
+       "4          22915              22919            22861     ...        \n",
+       "\n",
+       "   RDOMESTICMIG2011  RDOMESTICMIG2012  RDOMESTICMIG2013  RDOMESTICMIG2014  \\\n",
+       "0          0.002295         -0.193196          0.381066          0.582002   \n",
+       "1          7.242091         -2.915927         -3.012349          2.265971   \n",
+       "2         14.832960         17.647293         21.845705         19.243287   \n",
+       "3         -4.728132         -2.500690         -7.056824         -3.904217   \n",
+       "4         -5.527043         -5.068871         -6.201001         -0.177537   \n",
+       "\n",
+       "   RDOMESTICMIG2015  RNETMIG2011  RNETMIG2012  RNETMIG2013  RNETMIG2014  \\\n",
+       "0         -0.467369     1.030015     0.826644     1.383282     1.724718   \n",
+       "1         -2.530799     7.606016    -2.626146    -2.722002     2.592270   \n",
+       "2         17.197872    15.844176    18.559627    22.727626    20.317142   \n",
+       "3        -10.543299    -4.874741    -2.758113    -7.167664    -3.978583   \n",
+       "4          0.177258    -5.088389    -4.363636    -5.403729     0.754533   \n",
+       "\n",
+       "   RNETMIG2015  \n",
+       "0     0.712594  \n",
+       "1    -2.187333  \n",
+       "2    18.293499  \n",
+       "3   -10.543299  \n",
+       "4     1.107861  \n",
+       "\n",
+       "[5 rows x 100 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "census_df = pd.read_csv('census.csv')\n",
     "census_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Texas'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def answer_five():\n",
+    "    return census_df.groupby([\"STNAME\"],sort=False).sum()[\"COUNTY\"].idxmax()\n",
+    "answer_five()"
    ]
   },
   {
@@ -421,10 +704,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def answer_five():\n",
-    "    return \"YOUR ANSWER HERE\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -438,14 +718,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['California', 'Texas', 'Illinois']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_six():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    state_df = pd.DataFrame()\n",
+    "    state_df['State'] = census_df['STNAME'].unique()\n",
+    "    state_df['Top3PoP'] = 0\n",
+    "    state_df.set_index('State',inplace=True)\n",
+    "    for st in state_df.index:\n",
+    "        countiespop = census_df[(census_df['STNAME'] == st) & (census_df['SUMLEV'] == 50)].sort_values(by='CENSUS2010POP', ascending=False)\n",
+    "        stsum = sum(countiespop['CENSUS2010POP'].head(3))\n",
+    "        state_df['Top3PoP'].loc[st] = stsum\n",
+    "    state_df = state_df.sort_values(by='Top3PoP', ascending=False).head(3)\n",
+    "    return state_df.index.tolist()\n",
+    "answer_six()"
    ]
   },
   {
@@ -487,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_eight():\n",
