--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -761,14 +761,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Harris County'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_seven():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    popcols = [\"POPESTIMATE20\"+ str(x) for x in range(10,16)]\n",
+    "    cols = ['SUMLEV','CTYNAME'] + popcols\n",
+    "    dfp = census_df[cols]\n",
+    "    dfp = dfp[dfp['SUMLEV'] == 50]\n",
+    "    dfp.set_index('CTYNAME',inplace=True)\n",
+    "    maxx = dfp[popcols].max(axis=1)\n",
+    "    minn = dfp[popcols].min(axis=1)\n",
+    "    dfp['diff'] = maxx - minn\n",
+    "    return dfp['diff'].idxmax()\n",
+    "answer_seven()"
    ]
   },
   {
