--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -239,11 +239,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "# Summer           13\n",
+       "Gold                0\n",
+       "Silver              0\n",
+       "Bronze              2\n",
+       "Total               2\n",
+       "# Winter            0\n",
+       "Gold.1              0\n",
+       "Silver.1            0\n",
+       "Bronze.1            0\n",
+       "Total.1             0\n",
+       "# Games            13\n",
+       "Gold.2              0\n",
+       "Silver.2            0\n",
+       "Bronze.2            2\n",
+       "Combined total      2\n",
+       "ID                AFG\n",
+       "Name: Afghanistan, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# You should write your whole answer within the function provided. The autograder will call\n",
     "# this function and compare the return value against the correct solution value\n",
@@ -345,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -354,15 +379,15 @@
        "'Bulgaria'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def answer_three():\n",
-    "    df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
-    "    return ((df[\"Gold\"] - df[\"Gold.1\"])/df[\"Gold.2\"]).idxmax()\n",
+    "    dff = df[(df['Gold'] > 0) & (df['Gold.1'] > 0)].copy()\n",
+    "    return ((dff['Gold'] - dff['Gold.1'])/dff['Gold.2']).idxmax()\n",
     "\n",
     "answer_three()"
    ]
