did q8 - passed with 100% - off to a great fucking start

--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -828,14 +828,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1419</th>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2345</th>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2355</th>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3163</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            STNAME            CTYNAME\n",
+       "896           Iowa  Washington County\n",
+       "1419     Minnesota  Washington County\n",
+       "2345  Pennsylvania  Washington County\n",
+       "2355  Rhode Island  Washington County\n",
+       "3163     Wisconsin  Washington County"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def answer_eight():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "def answer_eight(): \n",
+    "    return census_df[((census_df['REGION'] == 1) | (census_df['REGION'] == 2)) & (census_df['POPESTIMATE2015'] > census_df['POPESTIMATE2014']) & (census_df['CTYNAME'].str.startswith(\"Washington\"))].loc[:,['STNAME','CTYNAME']]\n",
+    "\n",
+    "answer_eight()"
    ]
   }
  ],
