--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -73,12 +73,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                            Afghanistan\n",
+       "1                                                Albania\n",
+       "2                                                Algeria\n",
+       "3                                         American Samoa\n",
+       "4                                                Andorra\n",
+       "5                                                 Angola\n",
+       "6                                               Anguilla\n",
+       "7                                    Antigua and Barbuda\n",
+       "8                                              Argentina\n",
+       "9                                                Armenia\n",
+       "10                                                 Aruba\n",
+       "11                                             Australia\n",
+       "12                                               Austria\n",
+       "13                                            Azerbaijan\n",
+       "14                                               Bahamas\n",
+       "15                                               Bahrain\n",
+       "16                                            Bangladesh\n",
+       "17                                              Barbados\n",
+       "18                                               Belarus\n",
+       "19                                               Belgium\n",
+       "20                                                Belize\n",
+       "21                                                 Benin\n",
+       "22                                               Bermuda\n",
+       "23                                                Bhutan\n",
+       "24                                               Bolivia\n",
+       "25                      Bonaire, Sint Eustatius and Saba\n",
+       "26                                Bosnia and Herzegovina\n",
+       "27                                              Botswana\n",
+       "28                                                Brazil\n",
+       "29                                British Virgin Islands\n",
+       "                             ...                        \n",
+       "197                                          Switzerland\n",
+       "198                                 Syrian Arab Republic\n",
+       "199                                           Tajikistan\n",
+       "200                                             Thailand\n",
+       "201            The former Yugoslav Republic of Macedonia\n",
+       "202                                          Timor-Leste\n",
+       "203                                                 Togo\n",
+       "204                                                Tonga\n",
+       "205                                  Trinidad and Tobago\n",
+       "206                                              Tunisia\n",
+       "207                                               Turkey\n",
+       "208                                         Turkmenistan\n",
+       "209                             Turks and Caicos Islands\n",
+       "210                                               Tuvalu\n",
+       "211                                               Uganda\n",
+       "212                                              Ukraine\n",
+       "213                                 United Arab Emirates\n",
+       "214    United Kingdom of Great Britain and Northern I...\n",
+       "215                          United Republic of Tanzania\n",
+       "216                             United States of America\n",
+       "217                         United States Virgin Islands\n",
+       "218                                              Uruguay\n",
+       "219                                           Uzbekistan\n",
+       "220                                              Vanuatu\n",
+       "221                                            Venezuela\n",
+       "222                                             Viet Nam\n",
+       "223                            Wallis and Futuna Islands\n",
+       "224                                                Yemen\n",
+       "225                                               Zambia\n",
+       "226                                             Zimbabwe\n",
+       "Name: Country, Length: 227, dtype: object"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_one():\n",
-    "    return \"ANSWER\""
+    "    #load the energy data from the file Energy Indicators.xls\n",
+    "    energy = pd.read_excel('Energy Indicators.xls',skiprows = 17, skipfooter = 38, na_values = \"...\")\n",
+    "    \n",
+    "    #the first two columns are unneccessary,\n",
+    "    del energy['Unnamed: 0'], energy['Unnamed: 1']\n",
+    "    \n",
+    "    #change the column labels\n",
+    "    energy.columns = ['Country', 'Energy Supply', 'Energy Supply per Capita', '% Renewable']\n",
+    "    \n",
+    "    #convert Energy Supply to gigajoules\n",
+    "    energy['Energy Supply'] *= 1000000\n",
+    "    \n",
+    "    #replacing country names\n",
+    "    energy.replace('Republic of Korea','South Korea', inplace = True)\n",
+    "    energy.replace('United States of America','United States', inplace = True)\n",
+    "    energy.replace('United Kingdom of Great Britain and Northern Ireland','United Kingdom', inplace = True)\n",
+    "    energy.replace('China, Hong Kong Special Administrative Region','Hong Kong', inplace = True)\n",
+    "    \n",
+    "    #getting rid of numerical values in country names\n",
+    "    energy['Country'].replace('\\d*','', regex=True, inplace=True)\n",
+    "    energy['Country'].replace('\\s*\\(.*?\\)\\s*', '', regex=True, inplace=True)\n",
+    "    \n",
+    "    return energy['Country']\n",
+    "\n",
+    "answer_one()"
    ]
   },
   {
@@ -129,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_two():\n",
@@ -159,6 +257,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -182,6 +281,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -204,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_five():\n",
@@ -225,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_six():\n",
@@ -247,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_seven():\n",
@@ -270,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_eight():\n",
@@ -294,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_nine():\n",
@@ -305,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot9():\n",
@@ -321,7 +433,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#plot9() # Be sure to comment out plot9() before submitting the assignment!"
@@ -340,7 +454,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_ten():\n",
@@ -379,7 +495,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def answer_eleven():\n",
@@ -401,6 +519,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -426,6 +545,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -448,6 +568,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -472,7 +593,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#plot_optional() # Be sure to comment out plot_optional() before submitting the assignment!"
